# SR1CargaDeModelos

./: CMakeLists.txt  Color.h  Point.h  README.md  Readme.md  color.h  fastNoise.h  fragment.h  framebuffer.h  line.h  loadObj.h  main.cpp  point.h  shaders.h  uniform.h  vertexArray.h
